--- a/index.html
+++ b/index.html
@@ -6,3 +6,31 @@
 
 <!--iframe tag-->
 <iframe src="https://youtube.com" frameborder="10"></iframe>
+
+<!--image tag-->
+<img width="727" height="409" src="https://www.lamborghini.com/sites/it-en/files/DAM/lamborghini/facelift_2019/model_gw/images-s/2021/07_07/gate_family_s_02_m.jpg" alt="frt">
+
+<img width="727" height="409" src="./assets/332.jpg" alt="gry">
+
+<img width="727" height="409" src="C:\Users\User\Pictures\Screenshots\Screenshot (11).png" alt="kfh">
+
+<!--anchor tag-->
+<a href="https://lamborghini.com"><button>click me</button></a>
+
+<!--list tag-->
+<ul type="square">
+    <li>LAMBORGHINI CAR</li>
+    <li>LAMBORGHINI CAR</li>    
+    <li>LAMBORGHINI CAR</li>
+</ul>
+<!--ul give the spacing indentation-->
+
+<ol type="A">
+    <li>LAMBORGHINI CAR</li>
+    <li>LAMBORGHINI CAR</li>    
+    <li>LAMBORGHINI CAR</li>
+</ol>
+
+<!--paragraph tag-->
+<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque doloremque perspiciatis omnis, placeat at asperiores molestias ut, fugit, sequi error ipsum consequatur possimus odit sit. Iste labore tempore aspernatur placeat!
+</p>
