--- a/index.html
+++ b/index.html
@@ -34,3 +34,52 @@
 <!--paragraph tag-->
 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque doloremque perspiciatis omnis, placeat at asperiores molestias ut, fugit, sequi error ipsum consequatur possimus odit sit. Iste labore tempore aspernatur placeat!
 </p>
+
+<!--form tag-->
+<form>    
+    <input placeholder="Username" type="text" />
+    <input placeholder="email" type="email" />
+    <input type="number" />
+    <input type="password" />
+    <input type="date" />
+    <input type="color" />
+    <input type="file" />
+    <input type="checkbox" />
+<!--input is a self closing tag-->
+    <input type="radio" />
+    <input max="1000" min="0" type="range" />
+    <input type="submit" />
+    <input type="time" />
+</form>
+
+<!--15 september 2021 session notes-->
+
+<!--video tag-->
+<video width="727" height="409" autoplay controls>
+    <source src="./assets/chaman final vdo.mp4">
+</video>
+<!--youtube vdo-->
+<iframe width="727" height="409" src="https://www.youtube.com/embed/sqOgyNfHl1U"></iframe>
+<!--For youtube video embed code is used-->
+
+<!--audio tag-->
+<audio autoplay controls>
+    <source src="./assets/audio.mp3">
+</audio>
+
+<!--Table Tag-->
+<table>
+    <tr>
+        <th>Name</th>
+        <th>Location</th>
+    <!--th is used to bold the table heading-->
+    </tr>
+    <tr>
+        <td>swetanshu</td>
+        <td>odisha</td>
+    </tr>
+    <tr>
+        <td>Charles</td>
+        <td>odisha</td>
+    </tr>
+</table>
