--- a/index.html
+++ b/index.html
@@ -83,3 +83,46 @@
         <td>odisha</td>
     </tr>
 </table>
+
+<!-- 16th september 2021-->
+<!-- meta data & semantic tags-->
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+</head>
+
+<body>
+    <header>
+        <nav>
+            <a href="#">Home</a>
+            <a href="#">ABout</a>
+            <a href="#">Learn</a>
+        </nav>
+        <img src="" alt="" />
+    </header>
+    <main>
+        <section>
+            <h3>First content</h3>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem fugiat vero sunt, optio animi ipsam error expedita suscipit, cumque dolor aliquam nobis dicta quasi. Aspernatur nam ducimus atque modi voluptatum?
+            </p>
+        </section>
+        <section>
+            <h3>Second content</h3>
+            <p>Lo</p>
+        </section>
+    </main>
+    <strong>I'm bold</strong>
+    <footer>
+        <a href="#">Github</a>
+        <a href="#">Linkedin</a>
+        <a href="#">Instagram</a>
+    </footer>
+</body>
+
+</html>
