--- a/css1.html
+++ b/css1.html
@@ -5,6 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FULL STACKS CSS SESSION</title>
+    <style>
+        h1{
+            color: blue;
+            font-size: 25px;
+        }
+        h2{
+            color: pink;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-weight: 200;
+        }
+    </style>
 </head>
 <body>
     <h1 style="color: red;">Heading One</h1>
