style tag hierarchy

--- a/css1.html
+++ b/css1.html
@@ -6,37 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FULL STACKS CSS SESSION</title>
     <style>
-        .one{
-            color: limegreen;
-            font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-            font-weight: 300;
+        #red{
+            color: red;
         }
-        .two{
-            color: pink;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            font-weight: 400;
+        .pink{
+            color: violet;
         }
-        .orange{
+        h1{
             color: orange;
-        }
-        .big{
-            font-size: 40px;
-            font-weight: 900;
         }
     </style>
 </head>
 <body>
-    <h1 class="one">Heading One</h1>
-    <p class="one">
-        A riddle is a statement, question or phrase having a double or veiled meaning, put forth as a puzzle to be solved. Riddles are of two types: enigmas, which are problems generally expressed in metaphorical or allegorical language that require ingenuity and careful thinking for their solution, and conundra, which are questions relying for their effects on punning in either the question or the answer.
-    </p>
-    <hr />
-    <h1 class="two">Heading One</h1>
-    <p class="two">
-        A riddle is a statement, question or phrase having a double or veiled meaning, put forth as a puzzle to be solved. Riddles are of two types: enigmas, which are problems generally expressed in metaphorical or <b class="orange big">allegorical language</b> that require ingenuity and careful thinking for their solution, and conundra, which are questions relying for their effects on punning in either the question or the answer.
-    </p>
-    <div>
-        <spam class="big">A riddle is a statement, question or phrase having a double or veiled meaning, put forth as a puzzle to be solved. Riddles are of two types: enigmas, which are problems generally expressed in metaphorical or <b class="orange">allegorical language</b> that require ingenuity and careful thinking for their solution, and conundra, which are questions relying for their effects on punning in either the question or the answer.</spam>
-    </div>
+    <h1 style="color: bisque;">I'm the big heading</h1>
+    <p class="pink">style>id>class>element</p>
 </body>
 </html>
