--- a/css1.html
+++ b/css1.html
@@ -6,19 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FULL STACKS CSS SESSION</title>
     <style>
-        #red{
-            color: red;
-        }
-        .pink{
-            color: violet;
-        }
-        h1{
-            color: orange;
+        img{
+            width: 500px;
+            border-width: 20px;
+            border-style: dashed;
+            border-color: aquamarine;
+            border-radius: 50px;
         }
     </style>
 </head>
 <body>
-    <h1 style="color: bisque;">I'm the big heading</h1>
-    <p class="pink">style>id>class>element</p>
+    <div>
+        <img src="https://www.lamborghini.com/sites/it-en/files/DAM/lamborghini/facelift_2019/model_gw/aventador/2021/gate_aven_s_01_m.jpg" alt="lamborghini">
+    </div>
 </body>
 </html>
