img desigining shortcut

--- a/css1.html
+++ b/css1.html
@@ -8,10 +8,8 @@
     <style>
         img{
             width: 500px;
-            border-width: 20px;
-            border-style: dashed;
-            border-color: aquamarine;
             border-radius: 50px;
+            border: red dashed 20px;
         }
     </style>
 </head>
