--- a/css1.html
+++ b/css1.html
@@ -10,6 +10,7 @@
             width: 500px;
             border-radius: 50px;
             border: red dashed 20px;
+            filter: blur(2px);
         }
     </style>
 </head>
