--- a/css1.html
+++ b/css1.html
@@ -6,17 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FULL STACKS CSS SESSION</title>
     <style>
-        img{
-            width: 500px;
-            border-radius: 50px;
-            border: red dashed 20px;
-            filter: blur(2px);
+        div{
+            height: 100px;
+            background-color: red;
+        }
+        span{
+            height: 100px;
+            background-color: yellow;
         }
     </style>
 </head>
 <body>
-    <div>
-        <img src="https://www.lamborghini.com/sites/it-en/files/DAM/lamborghini/facelift_2019/model_gw/aventador/2021/gate_aven_s_01_m.jpg" alt="lamborghini">
-    </div>
+    <div></div>
+    <span>Swetanshu Agrawal</span>
 </body>
 </html>
