--- a/css2.html
+++ b/css2.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
@@ -8,14 +7,26 @@
     <style>
         span {
             color: blueviolet;
+        img {
+            width: 500px;
+            border: 20px dashed #ffbf00;
+            filter: brightness(50);
         }
 
         #block {
             color: red;
+        div {
+            height: 100px;
+            width: 100px;
+            background-color: red;
         }
 
         .orange {
             color: orange;
+        span {
+            height: 100px;
+            width: 100px;
+            background-color: red;
         }
     </style>
 </head>
@@ -23,13 +34,15 @@
 <body>
     <h1 style="color: red">I'm a heading</h1>
     <span>I'm a span</span>
-    <div>I'm a div</div>
     <div id="block">I'm a div with id block</div>
     <div class="orange">I'm a div with class orange</div>
     <span class="orange">I'm a div with class orange</span>
 
     <h1>Seniority Order</h1>
     <h2>!important > Inline>ID selector > Class Selector > Element Selector</h2>
+    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.caranddriver.com%2Flamborghini%2Fhuracan&psig=AOvVaw0usWQzIKBhFElJ_t4YoGoP&ust=1632306840826000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCND4k_3uj_MCFQAAAAAdAAAAABAD" alt="jhefg" />
+    <div></div>
+    <span></span>
 </body>
 
-</html> 
+</html
