--- a/css2.html
+++ b/css2.html
@@ -1,42 +1,44 @@
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSS</title>
     <style>
-        span {
-            background-color: cyan;
-        }
-         .background {
+        .background {
             background-color: aquamarine;
+        }
+            * {
+            margin: 0px;
+            padding: 0px;
             box-sizing: border-box;
             width: 250px;
             height: 250px;
             margin-left: 1000000px;
         }
+
+        .parent {
+            background-color: aquamarine;
+            height: 60px;
+            padding: 20px;
+            width: 40vw;
+        }
+
+        .child {
+            background-color: blueviolet;
+            height: 20px;
+            width: 80%;
+        }
     </style>
 </head>
 
 <body>
-    <!-- display properties -->
-    <!-- Box model -->
-    <!-- Units -->
-    <!-- Combined selectors -->
-    <div>
-        <h2>Pointers for block</h2>
-        <ol>
-            <li>Width of a block level element is 100% of the viewport width</li>
-            <li>Height of a block isn't set by default</li>
-            <li>Height & width can be explicitly set using CSS</li>
-        </ol>
     <div class="background">
         <h2>Lorem ip</h2>
+    <div class="parent">
+        <div class="child"></div>
     </div>
-    <span>
-      <h2>Pointers for inline</h2>
-      <ol>
-        <li>Width of an inline level element is dependent on the content</li>
-        <li>Height of an inline isn't set by default</li>
-        <li>Height & width can not be explicitly set using CSS</li>
-      </ol>
-    </span>
 </body>
 
 </html>
