commit for units (rem)

--- a/index.html
+++ b/index.html
@@ -1,128 +1,28 @@
-<!--FIRST FOUR DAYS SESSION-->
-
-<!--heading tag-->
-<i><h1>LAMBORGHINI CAR</h1></i>
-<!--italic can also be used-->
-
-<!--iframe tag-->
-<iframe src="https://youtube.com" frameborder="10"></iframe>
-
-<!--image tag-->
-<img width="727" height="409" src="https://www.lamborghini.com/sites/it-en/files/DAM/lamborghini/facelift_2019/model_gw/images-s/2021/07_07/gate_family_s_02_m.jpg" alt="frt">
-
-<img width="727" height="409" src="./assets/332.jpg" alt="gry">
-
-<img width="727" height="409" src="C:\Users\User\Pictures\Screenshots\Screenshot (11).png" alt="kfh">
-
-<!--anchor tag-->
-<a href="https://lamborghini.com"><button>click me</button></a>
-
-<!--list tag-->
-<ul type="square">
-    <li>LAMBORGHINI CAR</li>
-    <li>LAMBORGHINI CAR</li>    
-    <li>LAMBORGHINI CAR</li>
-</ul>
-<!--ul give the spacing indentation-->
-
-<ol type="A">
-    <li>LAMBORGHINI CAR</li>
-    <li>LAMBORGHINI CAR</li>    
-    <li>LAMBORGHINI CAR</li>
-</ol>
-
-<!--paragraph tag-->
-<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque doloremque perspiciatis omnis, placeat at asperiores molestias ut, fugit, sequi error ipsum consequatur possimus odit sit. Iste labore tempore aspernatur placeat!
-</p>
-
-<!--form tag-->
-<form>    
-    <input placeholder="Username" type="text" />
-    <input placeholder="email" type="email" />
-    <input type="number" />
-    <input type="password" />
-    <input type="date" />
-    <input type="color" />
-    <input type="file" />
-    <input type="checkbox" />
-<!--input is a self closing tag-->
-    <input type="radio" />
-    <input max="1000" min="0" type="range" />
-    <input type="submit" />
-    <input type="time" />
-</form>
-
-<!--15 september 2021 session notes-->
-
-<!--video tag-->
-<video width="727" height="409" autoplay controls>
-    <source src="./assets/chaman final vdo.mp4">
-</video>
-<!--youtube vdo-->
-<iframe width="727" height="409" src="https://www.youtube.com/embed/sqOgyNfHl1U"></iframe>
-<!--For youtube video embed code is used-->
-
-<!--audio tag-->
-<audio autoplay controls>
-    <source src="./assets/audio.mp3">
-</audio>
-
-<!--Table Tag-->
-<table>
-    <tr>
-        <th>Name</th>
-        <th>Location</th>
-    <!--th is used to bold the table heading-->
-    </tr>
-    <tr>
-        <td>swetanshu</td>
-        <td>odisha</td>
-    </tr>
-    <tr>
-        <td>Charles</td>
-        <td>odisha</td>
-    </tr>
-</table>
-
-<!-- 16th september 2021-->
-<!-- meta data & semantic tags-->
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>css-3</title>
+    <style>
+        *{
+            padding: 0px;
+            margin: 0px;
+            box-sizing: border-box;
+        }
+        .parents{
+            background-color: black;
+            color: white;
+            height: 100px;
+            font-size: 2.5rem;
+            padding-left: 90vh;
+        }
+    </style>
 </head>
-
 <body>
-    <header>
-        <nav>
-            <a href="#">Home</a>
-            <a href="#">ABout</a>
-            <a href="#">Learn</a>
-        </nav>
-        <img src="" alt="" />
-    </header>
-    <main>
-        <section>
-            <h3>First content</h3>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem fugiat vero sunt, optio animi ipsam error expedita suscipit, cumque dolor aliquam nobis dicta quasi. Aspernatur nam ducimus atque modi voluptatum?
-            </p>
-        </section>
-        <section>
-            <h3>Second content</h3>
-            <p>Lo</p>
-        </section>
-    </main>
-    <strong>I'm bold</strong>
-    <footer>
-        <a href="#">Github</a>
-        <a href="#">Linkedin</a>
-        <a href="#">Instagram</a>
-    </footer>
+    <div class="parents">
+        <h1>Heading</h1>
+    </div>
 </body>
-
 </html>
