--- a/index.html
+++ b/index.html
@@ -4,25 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>css-3</title>
+    <title>CSS-3</title>
     <style>
         *{
-            padding: 0px;
             margin: 0px;
+            padding: 0px;
             box-sizing: border-box;
         }
-        .parents{
-            background-color: black;
+        h1{
+            background-color: crimson;
             color: white;
-            height: 100px;
-            font-size: 2.5rem;
-            padding-left: 90vh;
+            padding: 10px;
+            padding-top: 47%;
+            height: 50vh;
+            text-align: right;
+
         }
     </style>
 </head>
 <body>
-    <div class="parents">
-        <h1>Heading</h1>
-    </div>
+    <h1>Lorem ipsum</h1>
 </body>
 </html>
