--- a/index.html
+++ b/index.html
@@ -10,19 +10,26 @@
             margin: 0px;
             padding: 0px;
             box-sizing: border-box;
-        }
-        h1{
-            background-color: crimson;
             color: white;
-            padding: 10px;
-            padding-top: 47%;
-            height: 50vh;
-            text-align: right;
-
+        }
+        div{
+            height: 200px;
+            margin: 20px;
+            background-color: orange;
+        }
+        .two{
+            background-color:blueviolet;
+            position:relative;
+            }
+        h1{
+            position: absolute;
+            right: 0px;
+            bottom: 0px;
+            background-color: red;
         }
     </style>
 </head>
 <body>
-    <h1>Lorem ipsum</h1>
+    <div class="two"><h1>Heading on div 2</h1></div>
 </body>
 </html>
