positining & relative, static, absolute & fixed

--- a/index.html
+++ b/index.html
@@ -27,9 +27,17 @@
             bottom: 0px;
             background-color: red;
         }
+        img{
+            width: 80px;
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
+    <img src="https://www.svgrepo.com/show/332117/message.svg" alt="mssg-logo">
     <div class="two"><h1>Heading on div 2</h1></div>
 </body>
 </html>
