--- a/index1.html
+++ b/index1.html
@@ -7,34 +7,36 @@
     <title>CSS4 & CSS5</title>
     <style>
         *{
-            margin: 0px;
+            margin: 5px;
             padding: 0px;
             box-sizing: border-box;
         }
-        .child{
-            height: 150px;
-            width: 150px;
+        .background{
+            color: #ffffff;
+        }
+        h1.background{
+            background-color: blueviolet;
+        }
+        h2.background{
+            background-color: cyan;
+        }
+        h2.background#unique{
+            background-color: crimson;
+        }
+        h3.background{
             background-color: orange;
-            margin: 10px;
         }
-        .parent{
-            min-height: 500px;
-            background-color: #000000;
-            position: relative;
-            display: flex;
-            flex-direction: row;
-            justify-content: center;
-            align-items: center;
+        span.background{
+            background-color: black;
         }
-     
     </style>
 </head>
 <body>
-    <div class="parent">
-        <div class="child"></div>
-        <div class="child" style="background-color: red;" ></div>
-        <div class="child" style="background-color: blueviolet;" ></div>
-    </div>
+    <h1 class="background">Heading One</h1>
+    <h2 class="background" id="unique">Heading Two</h2>
+    <h2 class="background">Second Heading Two</h2>
+    <h3 class="background">Heading Three</h3>
 
+    <span class="background">I am swetanshu</span>
 </body>
 </html>
