--- a/index1.html
+++ b/index1.html
@@ -11,25 +11,16 @@
             padding: 0px;
             box-sizing: border-box;
         }
-     div.parent div{
+     div.parent div:nth-child(2){
          background-color: lime;
-     }
-     div.parent h1{
-         background-color: crimson;
-     }
-     div.parent h2 {
-         background-color: cornflowerblue;
      }
     </style>
 </head>
 <body>
    <div class="parent">
-        <div>I'm a div</div>
-        <h1>I'm a Heading</h1>
-        <h2>I'm a Heading</h2>
-        <h1>I'm a Heading</h1>
-        <h2>I'm a Heading</h2>
-        <div>I'm a div again</div>
+        <div>I'm a First div</div>
+        <div>I'm a Second div</div>
+        <div>I'm a Third div</div>
     </div>
 </body>
 </html>
