--- a/index1.html
+++ b/index1.html
@@ -4,13 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TODO List</title>
+    <title>TODO-List</title>
     <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 <body>
-    <div class="parent">
-        <div class="child"></div>
-        <div class="child-2"></div>
+    <div>
+        <header></header>
+        <footer>
+            <div><a href="file:///D:/web-dev-project/index.html">Swetanshu Agrawal</a></div>
+            <div>
+                <a href="https://www.instagram.com/swetanshu.a/"><img class="social" src="./assets/images/instagram.png" alt="instagram"></a>
+                <a href="https://github.com/swetanshu17"><img class="social" src="./assets/images/github.png" alt="github"></a>
+                <a href="https://www.linkedin.com/in/swetanshu-agrawal-63aab5210/"><img class="social" src="./assets/images/linkedin.png" alt="linkidin"></a>
+            </div>
+        </footer>
     </div>
 </body>
 </html>
