--- a/index1.html
+++ b/index1.html
@@ -4,20 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TODO-List</title>
-    <link rel="stylesheet" href="./assets/css/styles.css">
+    <title>Document</title>
+    <style>
+        div.parent{
+            background-color: black;
+            color: white;
+            font-size: 2rem;
+        }
+        @media (max-width: 700px){
+            div.parent{
+                background-color: blueviolet;
+                color: wheat;
+                font-size: 1rem;
+            }
+        }
+        @media (max-width: 500px){
+            div.parent{
+                background-color: orange;
+                color: wheat;
+                font-size: 0.8rem;
+            }
+        }
+    </style>
 </head>
 <body>
-    <div>
-        <header></header>
-        <footer>
-            <div><a href="file:///D:/web-dev-project/index.html">Swetanshu Agrawal</a></div>
-            <div>
-                <a href="https://www.instagram.com/swetanshu.a/"><img class="social" src="./assets/images/instagram.png" alt="instagram"></a>
-                <a href="https://github.com/swetanshu17"><img class="social" src="./assets/images/github.png" alt="github"></a>
-                <a href="https://www.linkedin.com/in/swetanshu-agrawal-63aab5210/"><img class="social" src="./assets/images/linkedin.png" alt="linkidin"></a>
-            </div>
-        </footer>
+    <div class="parent">
+        <h1>I'm a Headding</h1>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur corrupti cum quod omnis, pariatur quos natus quasi dolorem. Fugiat similique optio quas vitae asperiores? Voluptatum neque quisquam voluptatem sequi ipsa.
     </div>
 </body>
 </html>
