--- a/index1.html
+++ b/index1.html
@@ -4,49 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        div.parent{
-            background-color: black;
-            color: white;
-            font-size: 2rem;
-        }
-     div.parent{
-         display: flex;
-         align-items: stretch;
-         background-color: black;
-         height: 100vh;
-     }
-     div.child-2{
-        background-color: crimson;
-        flex-basis: 20%;
-    }
-     div.child{
-         background-color: orange;
-         flex-basis: 80%;
-     }
-    @media(max-width: 450px){
-        div.child-2{
-            flex-basis: 80%;
-        }
-        div.child{
-            flex-basis: 10%;
-        }
-    }
-    @keyframes expand{
-        0%{
-            flex-basis: 0%;
-        }
-        100%{
-            flex-basis: 100px;
-        }
-    }
-    </style>
+    <title>Java script</title>
+    <script src="./app.js"></script>
 </head>
 <body>
-    <div class="parent">
-    <div class="child"></div>
-    <div class="child-1"></div>
-    </div>
+    
 </body>
 </html>
